--- a/client/src/Navbar.css
+++ b/client/src/Navbar.css
@@ -4,7 +4,7 @@
     position: sticky;
     top:0;
     z-index: 99;
-    min-width: 1920px;
+    min-width: 1900px;
     margin: 0 auto;
 }
 
